# logdetective

./: .env  .gitignore  .pre-commit-config.yaml  .pylintrc.tests  Containerfile  Containerfile.cuda  Containerfile.database  Containerfile.llama.cpp  Makefile  PUBLISHING  README.md  alembic.ini  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose.yaml  env_file  llama_cpp_server_config.json  logdetective.1.asciidoc  packit.yaml  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-publish.yml  manpage.yml  new-issues-to-board.yml  publish.yml  pytest.yml  python-diff-lint.yml  tox-lint.yml
alembic/: diagram.mmd  env.py  er_diagram.md
alembic/versions/: 00e7e0a8a20c_add_discussion_missing.py  2f60bb92411f_add_gitlab_metric_detection.py  360aea89443f_save_compressed_response_in_metrics_.py  3b9961377725_initial_schema.py  60e342e6c0f5_add_tables_for_annotated_builds.py  6899db36b88f_add_gitlab_merge_request_jobs_comments_.py  6e1fe3f1eccf_add_merge_requests_comments_reactions_.py  70466f47f936_initial_schema.py  725400e0ffb4_removed_certainty_from_the_model.py  951aa61d8b86_constraints_on_timezones.py  ae776dc8160b_add_koji_task_analysis_table.py  af6742665052_remove_build_log_and_add_mr_relationship.py  b4ed423319f9_removed_the_compressed_log_column.py  bbc5b9c1f0b3_use_biginteger_for_gitlab_ids_definition.py  d90c3ebde7ed_save_compressed_log_in_metrics_table.py  dda93a488cbf_verifying_koji_constraints.py  e73338ea1b53_remove_build_log_and_add_metrics_.py  fb7b51893c82_save_compressed_log_in_metrics_table.py
files/: fedora_messaging_conf.toml  run_server.sh
logbuddy/: drain3.ini  logbuddy.py
logdetective/: __init__.py  constants.py  drain3.ini  exceptions.py  extractors.py  logdetective.py  models.py  prompts-summary-first.yml  prompts-summary-only.yml  prompts.py  prompts.yaml  prompts.yml  remote_log.py  server.py  skip_snippets.yml  utils.py
logdetective/prompts/: agent_start_prompt.j2  message_template.j2  snippet_message_template.j2  snippet_system_prompt.j2  staged_message_template.j2  staged_system_prompt.j2  system_prompt.j2
logdetective/reactor/: api.py  config.py  dependencies.py  detective.py  errors.py  gitlab.py  koji.py  logging.py  models.py
logdetective/reactor/templates/: gitlab_full_comment.md.j2  gitlab_short_comment.md.j2
logdetective/server/: compressors.py  config.py  embedding.py  emoji.py  exceptions.py  gitlab.py  koji.py  llm.py  metric.py  models.py  plot.py  remote_log.py  request_queue.py  routes_gitlab.py  server.py  stats.py  utils.py
logdetective/server/agent/: agent.py  tools.py
logdetective/server/database/: __init__.py  base.py  model.py  models.py
logdetective/server/database/models/: __init__.py  annotated_builds.py  exceptions.py  koji.py  merge_request_jobs.py  merge_requests.py  metrics.py
logdetective/server/templates/: base_response.html.j2  gitlab_comment.md.j2  gitlab_full_comment.md.j2  gitlab_short_comment.md.j2
plans/: full.fmf
releng/training-machine/: spawn-logdetective02.yml
releng/training-machine/group_vars/: all.yml
scripts/: await_psql  bumpver.py  debug_runner.py  enable_pgvector.sh  get-failed-koji-builds.py
server/: config.yml  gunicorn-dev.config.py  gunicorn-prod-http.config.py  gunicorn-prod.config.py  nginx_dev.conf.template  nginx_prod.conf.template
tests/: full.fmf  test_database_models.py  test_database_models_merge_request_jobs.py  test_database_models_merge_requests.py  test_database_models_metrics.py  test_emojis.py  test_helpers.py  test_server.py  test_server_gitlab.py  test_server_metric.py  test_server_models.py  test_server_plot.py  test_server_remote_log.py  test_utils.py
tests/base/: base.fmf  test_extractors.py  test_helpers.py  test_prompts.py  test_sanitization.py  test_utils.py
tests/data/: strange-snippet-x86_64-root.test-log  test_collect_emojis.yaml  test_collect_emojis_for_mr.yaml  test_collect_emojis_with_404.yaml
tests/server/: server.fmf  test_agent.py  test_database_models_merge_request_jobs.py  test_database_models_metrics.py  test_emojis.py  test_helpers.py  test_server.py  test_server_analyze.py  test_server_compressors.py  test_server_gitlab.py  test_server_koji.py  test_server_metric.py  test_server_models.py  test_server_plot.py  test_server_remote_log.py  test_server_stats.py  test_server_token.py  test_server_utils.py  test_ssrfprotected_resolver.py
tests/server/agent/: test_agent.py  test_tools.py
tests/server/data/: test_emoji_removed.yaml
