[tool.poetry]
name = "logdetective"
version = "1.5.0"
description = "Log using LLM AI to search for build/test failures and provide ideas for fixing these."
authors = ["Jiri Podivin <jpodivin@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
include = [
    "logdetective/drain3.ini",
    "logdetective/server/templates/gitlab_comment.md.j2",
    "logdetective/prompts.yml",
    "logdetective.1.asciidoc",
]
packages = [
    { include = "logdetective" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Internet :: Log Analysis"
]

[tool.poetry.urls]
homepage = "https://github.com/fedora-copr/logdetective"
issues = "https://github.com/fedora-copr/logdetective/issues"

[tool.poetry.dependencies]
python = "^3.11"
llama-cpp-python = ">0.2.56,!=0.2.86"
drain3 = "^0.9.11"
huggingface-hub = ">0.23.2"
# rawhide has numpy 2, F40 and F41 are still on 1.26
# we need to support both versions
numpy = ">=1.26.0"
python-gitlab = ">=4.4.0"
pydantic = "^2.8.2"
pyyaml = "^6.0.1"
aiohttp = ">=3.7.4"  # latest version in el8
aiolimiter = "^1.0.0"

fastapi = {version = ">=0.111.1", optional = true }
sqlalchemy = {version = "^2.0.36", optional = true }
psycopg2-binary = {version = "^2.9.9", optional = true }
psycopg2 = {version = "^2.9.9", optional = true }
alembic = {version = "^1.13.3", optional = true }
matplotlib = {version = "^3.8.4", optional = true }
backoff = {version = "2.2.1", optional = true }
sentry-sdk = {version = "^2.17.0", optional = true, extras = ["fastapi"]}
openai = {version = "^1.82.1", optional = true}

[tool.poetry.extras]
server = ["fastapi", "sqlalchemy", "psycopg2", "alembic", "matplotlib", "backoff", "aiolimiter", "sentry-sdk", "openai"]
server-testing = ["fastapi", "sqlalchemy", "psycopg2-binary", "alembic", "matplotlib", "backoff", "pytest-asyncio", "sentry-sdk", "openai"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
logdetective = 'logdetective.logdetective:main'

[tool.pylint]
disable = [
    "inconsistent-return-statements",
    "missing-module-docstring",
    "too-few-public-methods",
    "unspecified-encoding",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
